docs: add loginUserHandler docs
